2012-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-981001-1.c:
	  Fixed #3511512 / #3511513.

2012-03-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-960801-1.c,
	  support/regression/tests/longlong.c:
	  Support for returning long long and unsigned long long in z80, z180 and r2k port.

2012-03-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed stack unbalance bug.

2012-03-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCasm.c (FileBaseName): fixed bug 3511092

2012-03-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-9*.c:
	  Added some more tests from the execute part of the gcc torture regression test suite.

2012-03-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (packForPush),
	  src/ds390/ralloc.c (packForPush),
	  src/hc08/ralloc.c (packForPush): fixed bug #3502628
	* support/regression/tests/gcc-torture-execute-20010403-1.c: reenabled
	* src/hc08/ralloc.c (packRegisters, packForPush): use packForPush
	  for SEND iCodes too.

2012-03-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (packForPush): fixed bug 3502621
	* support/regression/tests/gcc-torture-execute-20030117-1.c: enabled test

2012-03-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (isConformingBody): fixed bug #3509715
	* support/regression/tests/gcc-torture-execute-930513-2.c: reenabled
	* src/SDCCast.c (decorateType): fixed bug #3509713
	* support/regression/tests/gcc-torture-execute-930429-1.c: reenabled
	* src/SDCCicode.c (geniCodeAssign): fixed bug #3509712
	* support/regression/tests/gcc-torture-execute-921016-1.c: reenabled
	* src/SDCCopt.c (optimizeCastCast): fixed bug #3509711
	* support/regression/tests/gcc-torture-execute-921218-1.c: reenabled
