@@ -1,3 +1,9 @@
+2012-03-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/regression/tests/gcc-torture-execute-981001-1.c: Only use
+	  __reentrant for SDCC and not for test-host
+	* support/regression/tests/gcc-torture-execute-930106-1.c: Reenabled
+
 2012-03-28 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/gcc-torture-execute-981001-1.c:
